feat: include group operations
